Fixed a bug with scrollbar.

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -18,6 +18,10 @@
 	float: right;
 }
 
+body {
+	overflow-y:scroll;
+}
+
 h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
 }
